--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 <body>
     <h1>Baseball Stats</h1>
+    <p> 
+        <label><input type="radio" name="activity" value="Active">Active</label> 
+        <label><input type="radio" name="activity" value="Inactive">Inactive</label>
+    </p>
+    <p><input type="button" value="Get Value"></p>
     <dl>
       <dt>Player Name</dt>
       <dd id="player-name"></dd>
@@ -18,6 +23,12 @@
       <dd id="hitting-average"></dd>
       <dt>Homeruns</dt>
       <dd id="hitting-homeruns"></dd>
+      <dt>Runs Batted In</dt>
+      <dd id="hitting-rbi"></dd>
+      <dt>On Base Percentage</dt>
+      <dd id="hitting-obp"></dd>
+      <dt>Strike Outs</dt>
+      <dd id="hitting-so"></dd>
     </dl>
 
     <form>
