now updates player's league and team name

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <label><input type="radio" name="activity" value="Active">Active</label> 
         <label><input type="radio" name="activity" value="Inactive">Inactive</label>
     </p>
-    <p><input type="button" value="Get Value"></p>
+    <h3 id="player-league"></h3>
+    <h3 id="player-team"></h3>
     <dl>
       <dt>Player Name</dt>
       <dd id="player-name"></dd>
