stat titles are updated as needed

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <h3 id="player-league"></h3>
     <h3 id="player-team"></h3>
     <dl>
-      <dt>Player Name</dt>
+      <dt id="name"></dt>
       <dd id="player-name"></dd>
-      <dt>Hitting Average</dt>
+      <dt id ="avg"></dt>
       <dd id="hitting-average"></dd>
-      <dt>Homeruns</dt>
+      <dt id="hr"></dt>
       <dd id="hitting-homeruns"></dd>
-      <dt>Runs Batted In</dt>
+      <dt id="rbi"></dt>
       <dd id="hitting-rbi"></dd>
-      <dt>On Base Percentage</dt>
+      <dt id="obp"></dt>
       <dd id="hitting-obp"></dd>
-      <dt>Strike Outs</dt>
+      <dt id='so'></dt>
       <dd id="hitting-so"></dd>
     </dl>
 
