added html to allow user to select which stats to look at

--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
         <label><input type="radio" name="activity" value="Active">Active</label> 
         <label><input type="radio" name="activity" value="Inactive">Inactive</label>
     </p>
+    <div class="select-stats">
+        <legend>Select Stats:</legend>
+        <input type="checkbox" name="check-avg" id="check-avg">
+            <label for="check-avg">Hitting Average
+        </label>
+        <input type="checkbox" name="check-hr" id="check-hr">
+            <label for="check-hr">Homeruns
+        </label>
+        <input type="checkbox" name="check-rbi" id="check-rbi">
+            <label for="check-rbi">RBI
+        </label>
+        <input type="checkbox" name="check-obp" id="check-obp">
+            <label for="check-obp">On Base Percentage
+        </label>
+        <input type="checkbox" name="check-so" id="check-so">
+            <label for="check-so">Strike Outs
+        </label>
+    </div>
+    
     <h3 id="player-league"></h3>
     <h3 id="player-team"></h3>
     <dl>
