added ID to text input section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <p class="player-stat-info stat-data" id="hitting-so"></p>
     </div>
     <form id='form'>
-        <input type="text" placeholder="Player Name's"/>
+        <input id='input-text' type="text" placeholder="Player Name's"/>
         <input type="submit" value="Get Player Info" />
     </form>
 
