minor stylizing tweaks to polish project

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img id="image1" class="images" src="">
         <h2 class="player-stat-info" id="player-league"></h2>
         <img id="image2" class="images"  src="">
-            <h3 id="player-stat-info player-team"></h3>
+            <h3 id="player-team" class="player-stat-info"></h3>
             <p class="player-stat-info stat-title" id="name"></p>
             <p class="player-stat-info stat-data" id="player-name"></p>
             <p class="player-stat-info stat-title" id ="avg"></p>
