search results now show players pictures

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <label><input id="check-obp" class="stat" type="checkbox" name="check-obp">On Base Percentage</label>
             <label><input id="check-so" class="stat" type="checkbox" name="check-so">Strike Outs</label>
     </div>
-
+    
     <div id="player-info">
         <img id="image1" class="images" src=""> <h2 class="player-stat-info" id="player-league"> </h2><img id="image2" class="images"  src="">
-            <h3 id="player-team" class="player-stat-info"></h3>
+        <h3 id="player-team" class="player-stat-info"></h3>
+        <img id="player-picture" src="">
             <p class="player-stat-info stat-title" id="name"></p>
             <p class="player-stat-info stat-data" id="player-name"></p>
             <p class="player-stat-info stat-title" id ="avg"></p>
